gnome-disk-utility (3.25.91-1) UNRELEASED; urgency=medium

  * New upstream version 3.25.91
  * Build with meson

 -- Jeremy Bicha <jbicha@debian.org>  Wed, 30 Aug 2017 22:06:41 -0400

gnome-disk-utility (3.22.1-1) unstable; urgency=medium

  * New upstream release.
  * Bump debhelper compat level to 10.

 -- Michael Biebl <biebl@debian.org>  Tue, 08 Nov 2016 16:30:01 +0100

gnome-disk-utility (3.22.0-1) unstable; urgency=medium

  * Team upload.
  * New upstream version 3.22.0

 -- Andreas Henriksson <andreas@fatal.se>  Mon, 19 Sep 2016 11:33:14 +0200

gnome-disk-utility (3.21.91-1) unstable; urgency=medium

  * Team upload.
  * New upstream version 3.21.91

 -- Andreas Henriksson <andreas@fatal.se>  Thu, 01 Sep 2016 20:12:22 +0200

gnome-disk-utility (3.20.2-1) unstable; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Mon, 09 May 2016 12:24:08 +0200

gnome-disk-utility (3.20.1-1) unstable; urgency=medium

  * New upstream release.
  * Run wrap-and-sort -at.
  * Add Build-Depends on appstream-util (required for autoreconf).
  * Bump Standards-Version to 3.9.8.

 -- Michael Biebl <biebl@debian.org>  Fri, 15 Apr 2016 00:42:49 +0200

gnome-disk-utility (3.20.0-1) unstable; urgency=medium

  * Team upload.
  * New upstream release.
  * Bump Standards-Version to 3.9.7.

 -- Andreas Henriksson <andreas@fatal.se>  Thu, 24 Mar 2016 15:55:12 +0100

gnome-disk-utility (3.18.3.1-1) unstable; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Mon, 30 Nov 2015 00:00:02 +0100

gnome-disk-utility (3.18.2-1) unstable; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Tue, 10 Nov 2015 22:11:39 +0100

gnome-disk-utility (3.18.1-1) unstable; urgency=medium

  * New upstream release.
  * Stop overriding dh_builddeb, xz is the default compression nowadays.

 -- Michael Biebl <biebl@debian.org>  Mon, 12 Oct 2015 18:08:56 +0200

gnome-disk-utility (3.18.0-1) unstable; urgency=medium
