@@ -9,7 +9,6 @@ Uploaders: Michael Biebl <biebl@debian.org>,
 Build-Depends: appstream-util,
                debhelper (>= 10.3~),
                docbook-xsl,
-               gnome-settings-daemon-dev (>= 3.8),
                libcanberra-gtk3-dev (>= 0.1),
                libdvdread-dev (>= 4.2.0),
                libglib2.0-dev (>= 2.31.0),
