@@ -2,6 +2,8 @@ gnome-disk-utility (3.25.91-1) UNRELEASED; urgency=medium
 
   * New upstream version 3.25.91
   * Build with meson
+  * Drop obsolete Build-Depends on gnome-settings-daemon-dev
+  * debian/rules: Drop obsolete lines
 
  -- Jeremy Bicha <jbicha@debian.org>  Wed, 30 Aug 2017 22:06:41 -0400
 
